force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/LLC_BI__Spread_Statement_Record_Total__c.object-meta.xml
<CustomObject>
    <label>Spread Statement Total Group</label>
    <nameField>
        <label>Spread Statement Record Total Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spread Statement Total Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>