force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Color__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Color__c</fullName>
    <description>Administrators select a color for each Spreads group for Automated Spreading. By default, it is transparent.</description>
    <inlineHelpText>In Automated Spreading, every Spreads group has a color to assist the user in identifying which group each category belongs to.</inlineHelpText>
    <label>Group Color</label>
    <length>16</length>
    <type>Text</type>
</CustomField>