force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Global_Analysis_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Global_Analysis_Type__c</fullName>
    <description>This field is optional. It is driven by user selection during creation of the spread statement record total (group total). When &quot;Cash Flow&quot; or &quot;Debt Service&quot; is selected, the value(s) for this spread statement record total (group total) will be used in global analysis for a relationship using the underwriting bundle this spread statement record total is associated with. By default, this picklist is set to None. After initial creation, this cannot be edited within the spreading application, it must be edited through the Salesforce interface.</description>
    <label>Global Analysis Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Flow</fullName>
            </value>
            <value>
                <fullName>Debt Service</fullName>
            </value>
            <value>
                <fullName>Total Assets</fullName>
            </value>
            <value>
                <fullName>Total Liabilities</fullName>
            </value>
            <value>
                <fullName>Total Equity</fullName>
            </value>
            <value>
                <fullName>Adjusted Total Assets</fullName>
            </value>
            <value>
                <fullName>Adjusted Total Liabilities</fullName>
            </value>
            <value>
                <fullName>Adjusted Total Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>