force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Hide_Column_Totals__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Hide_Column_Totals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. Manually update to change. Controls the visibility of column totals below a group.</description>
    <inlineHelpText>Controls the visibility of column totals below a group.</inlineHelpText>
    <label>Hide Column Totals</label>
    <type>Checkbox</type>
</CustomField>