force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Hide_Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Hide_Currency_Symbol__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deprecated in favor of Group_Type__c field.</description>
    <label>-D Hide Currency Symbol</label>
    <type>Checkbox</type>
</CustomField>