force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Is_Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Grand_Total__c</fullName>
    <description>deprecated field use Is_Summary_Group__c instead</description>
    <formula>IF(LLC_BI__Spread_Statement_Type__r.LLC_BI__Spread_Statement_Total_Group__c  =  Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>-D Is Grand Total</label>
    <type>Checkbox</type>
</CustomField>