force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Is_Summary_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Summary_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This defaults to false. Manually update to change. Linked Records in this type of group are displayed normally and are non-editable, except for users with Configuration permission.</description>
    <inlineHelpText>Typically, this type of group is used to display the columns totals for each group of records in the statement.</inlineHelpText>
    <label>Is_Summary_Group</label>
    <type>Checkbox</type>
</CustomField>