force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Publish_On_Init_Event__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Publish_On_Init_Event__c</fullName>
    <description>This field is optional If set, SpreadStatement will trigger an event of this type when its first rendered with its period total values.</description>
    <inlineHelpText>Set this value to allow other applications to execute when a total is initialized.</inlineHelpText>
    <label>Publish On Init Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>