force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Publish_On_Update_Event__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Publish_On_Update_Event__c</fullName>
    <description>This field is optional If set, SpreadStatement will trigger an event of this type when it&apos;s first rendered with it&apos;s period total value.</description>
    <inlineHelpText>Set this value to allow other applications to execute when a total is updated.</inlineHelpText>
    <label>Publish On Update Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>