force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Row_Number__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Row_Number__c</fullName>
    <description>This field is optional. It is driven by user selection during creation of the spread statement record total (group total). This field determines the order the spread statement record totals in the spread statement template. After initial creation, this cannot be edited within the spreading application, it must be edited through the Salesforce interface.</description>
    <label>Row Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>