force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Source_Group__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Source_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system auto-populates this optional lookup field with the id of the cloned group from the Spreads Statement Total Group template.</description>
    <label>Source Group</label>
    <referenceTo>LLC_BI__Spread_Statement_Record_Total__c</referenceTo>
    <relationshipLabel>Cloned Spread Statement Total Groups</relationshipLabel>
    <relationshipName>Cloned_Spread_Statement_Total_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>