force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/fields/LLC_BI__Title__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Title__c</fullName>
    <description>This field is required. It is driven by user selection within the spreading application. The value in this field is what displays in the group header for a group as opposed to the spread statement record total name, which displays as the sum line item name.</description>
    <label>Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>