force-app/main/default/objects/LLC_BI__Spread_Statement_Record_Total__c/listViews/LLC_BI__All.listView-meta.xml
<ListView>
    <fullName>LLC_BI__All</fullName>
    <columns>NAME</columns>
    <columns>LLC_BI__Title__c</columns>
    <columns>LLC_BI__Spread_Statement_Type__c</columns>
    <columns>LLC_BI__Row_Number__c</columns>
    <columns>LLC_BI__Debit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>